# underpane

./: .gitignore  README.md  README.zh-CN.md
.github/workflows/: build.yml  deploy-website.yml
actions/publish-wallpaper/: action.yml
scripts/: version.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/wallpapers/cube/: index.html  index.toml  index.zh-CN.toml
src-tauri/resources/wallpapers/synthwave-canyon/: index.html  index.toml  index.zh-CN.toml
src-tauri/resources/wallpapers/synthwave_canyon/: index.html  index.toml
src-tauri/resources/wallpapers/video/: index.html  index.toml  index.zh-CN.toml
src-tauri/src/: app.rs  config.rs  cursor_position.rs  desktop_windows.rs  handlers.rs  install.rs  lib.rs  locale.rs  main.rs  monitor_info.rs  protocol.rs  runtime.js  tray.rs  utils.rs  wallpapers.rs  window_info.rs
src-tauri/src/locales/: en-US.toml  zh-CN.toml
src-ui/: build.ts  bun-env.d.ts  package.json
src-ui/src/: App.tsx  InstallWallpaperDialog.tsx  Quickstart.tsx  WallpaperEditor.api.ts  WallpaperEditor.tsx  WallpaperEditor.types.ts  background.html  i18n.ts  index.css  index.html  index.tsx
src-ui/src/components/ui/: color-picker.tsx  dialog.tsx
src-ui/src/locales/: en-US.ts  en-US.tsx  zh-CN.ts  zh-CN.tsx
src-website/: .gitignore  build.ts  bun-env.d.ts  package.json
src-website/src/: index.css  index.ts
src-website/src/components/: Layout.tsx
src-website/src/hooks/: lang.ts
src-website/src/lib/: i18n.ts  render.ts
src-website/src/pages/: Layout.tsx  index.html  index.tsx
src-website/src/pages/discover/: Detail.tsx  List.tsx  i18n.ts  index.html  index.tsx  meta.ts
