[package]
name = "underpane"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "underpane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2.0.5"
directories = "5"
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
url = "2.5.8"
notify = "8.2.0"
tokio = { version = "1", features = ["fs", "io-util", "sync", "macros", "time"] }
anyhow = "1.0.102"
winit = "0.30.13"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-graphics = { version = "0.3", features = ["CGWindowLevel"] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWorkspace", "NSRunningApplication", "NSEvent", "NSScreen", "block2"] }
block2 = "0.6"
objc2-foundation = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
] }

